--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint:fix": "npx eslint --fix \"**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
