--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
+    "cookie": "^0.4.1",
+    "mongodb": "^3.6.4",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
