--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,8 +24,8 @@
       }
     ],
     "no-use-before-define": "off",
-    "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }],
-    "@typescript-eslint/no-unused-vars": "warn",
+    "no-unused-vars": ["warn", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false, "varsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_" }],
     "sort-keys": "off",
     "react/prop-types": 0
   },
