--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.6.4",
     "next": "^10.0.6",
     "react": "17.0.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
     "react-fetching-library": "^1.7.6",
     "react-hook-form": "^6.15.4"
