--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie": "^0.4.1",
     "mongodb": "^3.6.4",
     "next": "^10.0.6",
+    "next-auth": "^3.11.2",
     "react": "17.0.1",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.1",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/mongodb": "^3.6.9",
+    "@types/next-auth": "^3.7.0",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
