--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/lodash": "^4.14.168",
+    "lodash": "^4.17.21",
     "mongodb": "^3.6.4",
     "next": "^10.0.6",
     "next-auth": "^3.11.2",
