--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/cookies": "^0.7.6",
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
+    "cookies": "^0.8.0",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.4",
     "next": "^10.0.6",
