--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "next-auth": "^3.11.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-fetching-library": "^1.7.6",
-    "react-hook-form": "^6.15.4"
+    "react-hook-form": "^6.15.4",
+    "react-query": "^3.12.1"
   },
   "devDependencies": {
     "@types/mongodb": "^3.6.9",
