--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@types/cookies": "^0.7.6",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.168",
+    "apollo-server-micro": "^2.21.1",
     "cookies": "^0.8.0",
+    "graphql": "^15.5.0",
+    "graphql-request": "^3.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.4",
