--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clean:gql": "rm -rf ./.next/.cache/next-babel-loader"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.12",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
