--- a/package.json
+++ b/package.json
@@ -17,14 +17,9 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@types/cookies": "^0.7.6",
-    "@types/graphql": "^14.5.0",
-    "@types/js-cookie": "^2.2.6",
-    "@types/lodash": "^4.14.168",
     "apollo-server-micro": "^2.21.1",
     "cookies": "^0.8.0",
     "graphql": "^15.5.0",
-    "graphql-request": "^3.4.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.4",
@@ -32,10 +27,13 @@
     "next-auth": "^3.11.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-hook-form": "^6.15.4",
-    "react-query": "^3.12.1"
+    "react-hook-form": "^6.15.4"
   },
   "devDependencies": {
+    "@types/cookies": "^0.7.6",
+    "@types/graphql": "^14.5.0",
+    "@types/js-cookie": "^2.2.6",
+    "@types/lodash": "^4.14.168",
     "@types/mongodb": "^3.6.9",
     "@types/next-auth": "^3.7.0",
     "@types/node": "^14.14.25",
