Change the state of the issue after reveling the results
- Introduce an graphql enum IssueState to replace the old one

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "postinstall": "npm run codegen",
-    "predev": "npm run clean:gql",
+    "predev": "npm run clean:gql && npm run codegen",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
