--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.12",
+    "@harelpls/use-pusher": "^7.2.1",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -28,6 +29,7 @@
     "mongodb": "^3.6.4",
     "next": "^10.0.6",
     "next-auth": "^3.11.2",
+    "pusher": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.4"
