REFACTOR Rework environment variables for Pusher

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,6 @@ EMAIL_USERNAME=
 EMAIL_PASSWORD=
 
 PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
+PUSHER_KEY=
+PUSHER_SECRET=
+PUSHER_CLUSTER=
