--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+#https://nextjs.org/docs/basic-features/environment-variables
+
 NEXTAUTH_URL=http://localhost:3000
 IS_PROD=true
 
@@ -12,3 +14,6 @@ PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
 PUSHER_CLUSTER=
+
+NEXT_PUBLIC_PUSHER_KEY=
+NEXT_PUBLIC_PUSHER_CLUSTER=
