--- a/package.json
+++ b/package.json
@@ -16,23 +16,21 @@
     "codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.12",
+    "@apollo/client": "^3.3.13",
     "@harelpls/use-pusher": "^7.2.1",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "apollo-server-micro": "^2.21.1",
+    "apollo-server-micro": "^2.22.2",
     "cookies": "^0.8.0",
     "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
-    "lodash": "^4.17.21",
-    "mongodb": "^3.6.4",
-    "next": "^10.0.6",
-    "next-auth": "^3.11.2",
+    "mongodb": "^3.6.5",
+    "next": "^10.1.3",
+    "next-auth": "^3.13.3",
     "pusher": "^5.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-hook-form": "^6.15.4"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.3",
@@ -42,21 +40,19 @@
     "@types/cookies": "^0.7.6",
     "@types/graphql": "^14.5.0",
     "@types/js-cookie": "^2.2.6",
-    "@types/lodash": "^4.14.168",
-    "@types/mongodb": "^3.6.9",
-    "@types/next-auth": "^3.7.0",
-    "@types/node": "^14.14.25",
-    "@types/react": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "@types/mongodb": "^3.6.11",
+    "@types/next-auth": "^3.13.0",
+    "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.1",
     "prettier": "2.2.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   }
 }
