--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@sentry/browser": "^6.2.5",
+    "@sentry/integrations": "^6.2.5",
+    "@sentry/node": "^6.2.5",
+    "@sentry/webpack-plugin": "^1.14.2",
     "apollo-server-micro": "^2.22.2",
     "cookies": "^0.8.0",
     "graphql": "^15.5.0",
