--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@sentry/browser": "^6.2.5",
     "@sentry/integrations": "^6.2.5",
     "@sentry/node": "^6.2.5",
+    "@sentry/types": "^6.2.5",
     "@sentry/webpack-plugin": "^1.14.2",
     "apollo-server-micro": "^2.22.2",
     "cookies": "^0.8.0",
