--- a/package.json
+++ b/package.json
@@ -34,9 +34,8 @@
     "next": "^10.1.3",
     "next-auth": "^3.13.3",
     "pusher": "^5.0.0",
-    "react": "^17.0.2",
-    "react-dom": "17.0.2",
-    "react-intl": "^5.15.7"
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.3",
