--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "next-auth": "^3.13.3",
     "pusher": "^5.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-avatar-editor": "^11.1.0",
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.21.3",
