--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,16 @@ NEXT_PUBLIC_PUSHER_KEY=
 PUSHER_SECRET=
 NEXT_PUBLIC_PUSHER_CLUSTER=
 
-
 ### SENTRY
 
 NEXT_PUBLIC_SENTRY_DSN=
+
+### AMAZON S3
+
+ACCESS_KEY=
+SECRET_KEY=
+REGION=us-east-1
+BUCKET_NAME=
 
 # Only required to upload sourcemaps
 # SENTRY_ORG=
