--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "cdk": "cdk",
     "predev": "npm run clean:gql && npm run codegen",
     "dev": "next dev",
     "prebuild": "npm run clean:gql && npm run codegen",
@@ -27,6 +28,7 @@
     "@sentry/types": "^6.2.5",
     "@sentry/webpack-plugin": "^1.14.2",
     "apollo-server-micro": "^2.22.2",
+    "aws-sdk": "^2.889.0",
     "cookies": "^0.8.0",
     "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
@@ -40,6 +42,8 @@
     "react-dropzone": "^11.3.2"
   },
   "devDependencies": {
+    "@aws-cdk/aws-s3": "^1.99.0",
+    "@aws-cdk/core": "^1.99.0",
     "@graphql-codegen/cli": "1.21.3",
     "@graphql-codegen/typescript": "1.21.1",
     "@graphql-codegen/typescript-operations": "^1.17.15",
@@ -52,6 +56,7 @@
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "aws-cdk": "^1.99.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard": "^16.0.2",
