--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apollo-server-micro": "^2.22.2",
     "aws-sdk": "^2.889.0",
     "cookies": "^0.8.0",
+    "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "js-cookie": "^2.2.1",
     "mongodb": "^3.6.5",
