Rename environment variables to reflect S3 relevance

--- a/.env.example
+++ b/.env.example
@@ -26,10 +26,10 @@ NEXT_PUBLIC_SENTRY_DSN=
 
 ### AMAZON S3
 
-ACCESS_KEY=
-SECRET_KEY=
-REGION=us-east-1
-BUCKET_NAME=
+S3_ACCESS_KEY=
+S3_SECRET_KEY=
+S3_REGION=
+S3_BUCKET_NAME=
 
 # Only required to upload sourcemaps
 # SENTRY_ORG=
