--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/system": "^5.0.0-beta.1",
+    "cookies": "^0.8.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
+    "@types/cookies": "^0.7.6",
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
