--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@emotion/react": "^11.4.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
+    "@harelpls/use-pusher": "^7.2.1",
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/system": "^5.0.0-beta.1",
     "cookies": "^0.8.0",
     "next": "11.0.1",
+    "pusher": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
