--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/system": "^5.0.0-beta.1",
+    "@types/js-cookie": "^2.2.7",
     "cookies": "^0.8.0",
+    "js-cookie": "^3.0.0",
     "next": "11.0.1",
     "pusher": "^5.0.0",
     "react": "17.0.2",
