--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^3.0.0",
     "next": "11.0.1",
     "pusher": "^5.0.0",
+    "pusher-js": "^7.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
