--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/system": "^5.0.0-beta.1",
     "@types/js-cookie": "^2.2.7",
+    "apollo-server-micro": "^3.1.2",
     "cookies": "^0.8.0",
+    "graphql": "^15.5.1",
     "js-cookie": "^3.0.0",
     "next": "11.0.1",
     "pusher": "^5.0.0",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.3.0",
     "@types/cookies": "^0.7.6",
+    "@types/graphql": "^14.5.0",
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
