--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/system": "^5.0.0-beta.1",
-    "@types/js-cookie": "^2.2.7",
     "apollo-server-micro": "^3.1.2",
     "cookies": "^0.8.0",
     "graphql": "^15.5.1",
     "js-cookie": "^3.0.0",
+    "mongodb": "^4.1.1",
     "next": "11.0.1",
     "pusher": "^5.0.0",
     "pusher-js": "^7.0.3",
@@ -45,6 +45,8 @@
     "@graphql-codegen/visitor-plugin-common": "^2.1.1",
     "@types/cookies": "^0.7.6",
     "@types/graphql": "^14.5.0",
+    "@types/js-cookie": "^2.2.7",
+    "@types/mongodb": "^4.0.7",
     "@types/react": "17.0.14",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
