--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "graphql": "^15.5.1",
     "js-cookie": "^3.0.0",
     "mongodb": "^4.1.1",
-    "next": "11.0.1",
+    "next": "^11.0.1",
     "pusher": "^5.0.0",
     "pusher-js": "^7.0.3",
     "react": "17.0.2",
