--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@material-ui/core": "^5.0.0-beta.1",
     "@material-ui/icons": "^5.0.0-beta.1",
     "@material-ui/system": "^5.0.0-beta.1",
+    "@types/lodash": "^4.14.172",
     "apollo-server-micro": "^3.1.2",
     "cookies": "^0.8.0",
     "graphql": "^15.5.1",
     "js-cookie": "^3.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^4.1.1",
     "next": "^11.0.1",
     "pusher": "^5.0.0",
