--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@graphql-codegen/typescript": "^2.1.1",
     "@graphql-codegen/typescript-operations": "^2.1.1",
     "@graphql-codegen/typescript-react-apollo": "^3.1.1",
+    "@graphql-codegen/typescript-resolvers": "^2.1.2",
     "@graphql-codegen/visitor-plugin-common": "^2.1.1",
     "@types/cookies": "^0.7.6",
     "@types/graphql": "^14.5.0",
