--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.1.1",
     "next": "^11.0.1",
+    "next-absolute-url": "^1.2.2",
     "pusher": "^5.0.0",
     "pusher-js": "^7.0.3",
     "react": "17.0.2",
