--- a/codegen.yml
+++ b/codegen.yml
@@ -5,6 +5,8 @@ generates:
   ./src/generated/graphql.tsx:
     config:
       contextType: ../server/graphql/models#ResolverContext
+      namingConvention:
+        enumValues: "change-case#upperCase"
     plugins:
       - "typescript"
       - "typescript-operations"
