--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "@harelpls/use-pusher": "^7.2.1",
-    "@mui/icons-material": "^5.0.0-rc.1",
-    "@mui/material": "^5.0.0-rc.1",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@types/lodash": "^4.14.172",
     "apollo-server-micro": "^3.1.2",
     "cookies": "^0.8.0",
