Bring back the avatar upload in the user settings

--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@mui/material": "^5.0.0",
     "@types/lodash": "^4.14.172",
     "apollo-server-micro": "^3.1.2",
+    "aws-sdk": "^2.900.0",
     "cookies": "^0.8.0",
+    "formidable": "^1.2.2",
     "graphql": "^15.5.1",
     "js-cookie": "^3.0.0",
     "lodash": "^4.17.21",
@@ -35,9 +37,13 @@
     "pusher": "^5.0.0",
     "pusher-js": "^7.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-avatar-editor": "^12.0.0",
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2"
   },
   "devDependencies": {
+    "@aws-cdk/aws-s3": "^1.102.0",
+    "@aws-cdk/core": "^1.102.0",
     "@emotion/babel-plugin": "^11.3.0",
     "@graphql-codegen/cli": "2.1.1",
     "@graphql-codegen/introspection": "2.1.0",
@@ -51,8 +57,11 @@
     "@types/js-cookie": "^2.2.7",
     "@types/mongodb": "^4.0.7",
     "@types/react": "17.0.14",
+    "@types/react-avatar-editor": "^10.3.6",
+    "@types/react-dropzone": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "aws-cdk": "^1.102.0",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "eslint-config-prettier": "^8.3.0",
