--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/lodash": "^4.14.172",
     "apollo-server-micro": "^3.1.2",
     "aws-sdk": "^2.900.0",
+    "classnames": "^2.2.6",
     "cookies": "^0.8.0",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
